Adding solution for Scenario2